# CVLAB

./: .gitignore  LICENSE  README.md  app.py  clean.py  custom_utils.py  eval.py  imgui-2.0.0-cp38-cp38-win_amd64.whl  imgui.ini  main.py  pyproject.toml  reqs.txt  variables.py
autoannotate_utils/: unsupervised_classification.py
components/: annotation.py  auto_annotation.py  data.py  file_selector.py  home.py  modals.py  projects.py  settings.py
cvlab/: __init__.py  app.py  app2.py  main.py  setup_project.py
cvlab/autoannotate_utils/: unsupervised_classification.py
cvlab/components/: annotation.py  auto_annotation.py  data.py  home.py  modals.py  projects.py
cvlab/components/util/: check.py
cvlab/gui/: app.py  base.py  custom_utils.py
cvlab/gui/dialogs/: export.py  file_selector.py
cvlab/gui/home/: component.py
cvlab/gui/sections/: OLD_auto_annotation.py  annotation.py  data_info.py  home.py  settings.py
cvlab/model/: app.py  data.py  project.py
cvlab/utils/: check_export.py
cvlab/yolov5/: detect.py
cvlab/yolov5/models/: experimental.py  yolo.py
cvlab/yolov5/utils/: autobatch.py  general.py  metrics.py  plots.py
yolov5/: detect.py
yolov5/models/: common.py  experimental.py  yolo.py
yolov5/utils/: augmentations.py  autoanchor.py  datasets.py  general.py  plots.py  torch_utils.py
