[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "cvlab"
author = "Mauro Sciancalepore"
home-page = "https://github.com/masc-it/CVLAB"

requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
    
]
requires = [
    "pyimgui-wheels",
    "numpy",
    "pandas",
    "seaborn",
    "faiss-cpu",
    "torch",
    "torchvision",
    "glfw",
    "pygame",
    "PyYAML",
    "tqdm",
    "PyOpenGL",
    "Pillow",
    "onnx",
    "onnxruntime",
    "opencv-python-headless<=4.5.3.56",
    "stbpy",
    "pydantic >=1.6.2,!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0",
]

[tool.flit.metadata.urls]
bug-tracker = "https://github.com/masc-it/CVLAB/issues"